# sensitivity_zkp

./: README_SENSITIVITY.md  proof_transcript  sensitivity_example.cpp  test_sensitivity.sh
new_sensitivity/: CMakeLists.txt
new_sensitivity/examples/: identity_model.txt  lenet_small_input.txt  lenet_small_model.txt
new_sensitivity/include/gradient/: forward_backward.hpp  gkr_plan.hpp  model.hpp  pipeline.hpp  quantization.hpp  zk_globals.hpp  zk_prover.hpp
new_sensitivity/src/: forward_backward.cpp  gkr_plan.cpp  main.cpp  model.cpp  pipeline.cpp  quantization.cpp  zk_globals.cpp  zk_prover.cpp
new_sensitivity/tests/: model_loader.cpp  random_cnn.cpp  random_dense.cpp
src/: CNN.cpp  CNN.h  GKR.cpp  GKR.h  fieldElement.cpp  fieldElement.hpp  main.cpp  poly_commit.h  proof.cpp  proof.h  sensitive_proof.cpp  sensitivity_proof.cpp
